src/test/ui/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:10:12
   |
LL |         ().a()
   |            ^^^ the trait `~const Tr` is not implemented for `()`
   |
note: the trait `Tr` is implemented for `()`, but that implementation is not `const`
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:10:12
   |
LL |         ().a()
   |            ^^^

error[E0015]: cannot call non-const fn `<() as Tr>::a` in constant functions
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:10:12
   |
LL |         ().a()
   |            ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
